2002-10-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (ac_defun_rx, ac_require_rx): If the macro name is
	quoted, accept any character but `]'.  This makes it possible
	to define macros such as `AC_LANG_PREPROC(Fortran 90)'.
	(scan_m4_files): Quote $key in the regex.  Don't define $expr, it's
	not used.
	(add_file, scan_file): Adjust to the new definitions of $ac_defun_rx
	and $ac_require_rx.
	* tests/aclocal2.test: New file.
	* tests/Makefile.am (TESTS): Add aclocal2.test.
	Reported by Tamara L. Dahlgren and Tom Epperly.

2002-10-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* NEWS: Summarize recent bug fixes.

	For Debian Bug#153697:
	* lib/am/dejagnu.am (distclean-DEJAGNU): Remove $tool.sum and
	$tool.log.
	Suggested by Andrew Suffield.

2002-10-10  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/369:
	* lib/am/python.am: Lookup python files in build directory or
	source directory.
	From Mathias Doreille.
	* tests/python3.test: New file.
	* tests/Makefile.am (TESTS): Add python3.test.
	* tests/defs: Handle `required=python'.

	For PR automake/358:
	* lib/am/texi-vers.am (%STAMPVTI%): Depend on configure instead of
	configure.ac.
	Suggested by Thien-Thi Nguyen.
	* tests/vtexi.test: Adjust.

2002-10-08  Paul Eggert  <eggert@twinsun.com>

	* lib/am/texibuild.am (%DEST_PREFIX%%DEST_SUFFIX%,
	%DEST_PREFIX%.dvi, %DEST_PREFIX%.pdf): Use "makeinfo -o output
	input", not "makeinfo input -o output", as the latter fails if
	POSIXLY_CORRECT=1.
	* lib/am/texinfos.am (.dvi.ps): Likewise for dvips.
	* m4/depend.m4 (_AM_DEPENDENCIES): Likewise for $depcc.

2002-10-08  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (file_contents_internal): Fix the relationship
	regex flags, don't use `m'.

	For Debian Bug#162583:
	* automake.in (file_contents_internal): Simplify regex to
	separate relationship from actions in rules.
	Reported by Sam Hocevar.

2002-10-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_source_transform): If foo_SOURCES is defined