@@ -1,4 +1,6 @@
 Bugs fixed in 1.7.0a:
+* Honor `ansi2knr' for files built in subdirectories, or using per-targets
+  flags.
 * Aclocal should now recognize macro names containing parentheses, e.g.
   AC_DEFUN([AC_LANG_PREPROC(Fortran 90)], [...]).
 * Erase *.sum and *.log files created by DejaGnu, during `make distclean'.
