@@ -1,3 +1,12 @@
+2002-10-15  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (handle_single_transform_list) <full_ansi>: New variable.
+	Use this to record correct dependencies about deansifiable files which
+	are using per-program flags or are in a subdirectory.
+	* tests/ansi9.test: New file.
+	* tests/Makefile.am (TESTS): Add ansi9.test.
+	Reported by Paul D. Smith
+
 2002-10-12  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* aclocal.in (ac_defun_rx, ac_require_rx): If the macro name is
